--- a/art-gallery-pallet/Cargo.toml
+++ b/art-gallery-pallet/Cargo.toml
@@ -11,6 +11,8 @@ serde = { version = "1.0.123", optional = true }
 codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
 sp-std = { version = "3.0.0", default-features = false }
 sp-runtime = { version = "3.0.0", default-features = false }
+sp-core = { version = "3.0.0", default-features = false }
+sp-io = { version = "3.0.0", default-features = false }
 
 frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
@@ -19,9 +21,6 @@ orml-traits = { version = "0.4.0", default-features = false }
 orml-nft = { version = "0.4.0", default-features = false }
 
 [dev-dependencies]
-sp-core = { version = "3.0.0", default-features = false }
-sp-io = { version = "3.0.0", default-features = false }
-
 #clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179
 
 [features]
@@ -34,7 +33,7 @@ std = [
 	"sp-std/std",
 	"frame-support/std",
 	"frame-system/std",
-	#"pallet-atomic-swap/std",
-	#"orml-traits/std",
+	"pallet-atomic-swap/std",
+	"orml-traits/std",
 	"orml-nft/std",
 ]
