--- a/art-gallery-pallet/Cargo.toml
+++ b/art-gallery-pallet/Cargo.toml
@@ -14,6 +14,7 @@ sp-runtime = { version = "3.0.0", default-features = false }
 sp-core = { version = "3.0.0", default-features = false }
 sp-io = { version = "3.0.0", default-features = false }
 
+frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
 frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
 pallet-atomic-swap = { version = "3.0.0", default-features = false }
@@ -22,6 +23,7 @@ orml-nft = { version = "0.4.0", default-features = false }
 
 [dev-dependencies]
 #clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179
+pallet-balances = { version = "3.0.0" }
 
 [features]
 default = ["std"]
@@ -31,9 +33,11 @@ std = [
 	"sp-runtime/std",
 	"sp-io/std",
 	"sp-std/std",
+	"frame-benchmarking/std",
 	"frame-support/std",
 	"frame-system/std",
 	"pallet-atomic-swap/std",
 	"orml-traits/std",
 	"orml-nft/std",
 ]
+runtime-benchmarks = ["frame-benchmarking"]
