fix to support rococo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "pallet-chiba"
 description = "Chiba Studio runtime module."
 license = "Apache-2.0"
 version = "0.4.0-dev"
-authors = ["Usetech <hello@usetech.com>, Joshua Mir <https://github.com/joshua-mir>, Dan Forbes <dan@danforbes.dev>"]
+authors = ["Usetech <hello@usetech.com>, Joshua Mir <https://github.com/joshua-mir>, Dan Forbes <dan@danforbes.dev>", Masterdubs <contact@masterdubs.io>]
 edition = "2018"
 
 [dependencies]
@@ -11,23 +11,23 @@ codec = { package = "parity-scale-codec", version = "2.0.0", default-features = 
 serde = { version = "1.0.123", default-features = false }
 
 # Substrate core dependencies
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 
 # FRAME dependencies
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
-frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 
 # Chiba dependencies
-pallet-atomic-swap = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+pallet-atomic-swap = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 orml-nft = { git = "https://github.com/chiba-studio/open-runtime-module-library", branch = "master", default-features = false }
 orml-traits = { git = "https://github.com/chiba-studio/open-runtime-module-library", branch = "master", default-features = false }
 
 [dev-dependencies]
-pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 
 [features]
 default = ["std"]
